# homelab-assistant

./: .gitignore  CLAUDE.md  README.md  plan.md
homelab-assistant/: README.md  TESTING.md  pyproject.toml  requirements.txt  test-runner.sh
homelab-assistant/apps/frontend/: Dockerfile  index.html  nginx.conf  package.json
homelab-assistant/apps/frontend/src/: App.tsx
homelab-assistant/apps/frontend/src/components/: MessageInput.tsx  MessageList.tsx
homelab-assistant/apps/gateway/: Dockerfile
homelab-assistant/apps/gateway/gateway/: __init__.py  main.py
homelab-assistant/apps/llm_adapter/: Dockerfile
homelab-assistant/apps/llm_adapter/llm_adapter/: __init__.py  main.py
homelab-assistant/apps/llm_adapter/llm_adapter/providers/: __init__.py  base.py  groq_provider.py  openai_provider.py
homelab-assistant/apps/orchestrator/: Dockerfile
homelab-assistant/apps/orchestrator/orchestrator/: __init__.py  audit.py  database.py  main.py  tools.py
homelab-assistant/apps/tool_monitoring/: Dockerfile
homelab-assistant/apps/tool_monitoring/tool_monitoring/: __init__.py  containers.py  main.py  system.py
homelab-assistant/deploy/: .env.example  docker-compose.yml
homelab-assistant/tests/: conftest.py  test_audit.py  test_database.py  test_gateway.py  test_llm_adapter.py  test_monitoring.py  test_orchestrator.py  test_schemas.py
