[project]
name = "homelab-assistant"
version = "1.0.0"
description = "Cloud-first personal assistant for homelab servers"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # HTTP client
    "httpx>=0.27.0",

    # LLM providers
    "openai>=1.51.0",

    # System monitoring
    "psutil>=6.0.0",
    "docker>=7.1.0",

    # Shared packages
    "homelab-schemas",
    "homelab-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homelab-assistant"
version = "1.0.0"
description = "Cloud-first personal assistant for homelab servers"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
openai = "^1.51.0"
psutil = "^6.0.0"
docker = "^7.1.0"
homelab-schemas = { path = "packages/homelab_schemas", develop = true }
homelab-common = { path = "packages/homelab_common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
